tests/lean/2697.lean.expected.out
2697.lean:1:0-1:7: error: (kernel) invalid projection
  h.2
